# auction

./: .gitignore  Anchor.toml  justfile  package.json  rust-toolchain.yml  tsconfig.json
client/: index.ts
client/idl/: aipool_auction.json  aipool_auction.ts
programs/auction/: Cargo.toml
programs/auction/src/: lib.rs
tests/: auction.ts
